--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <a target="_blank" href="https://docs.google.com/document/d/1a7XWHbWbbMsa6FjKuNH8glH7d8W8b_9HSV2xOPZY0UM/edit" class="text-dark">Project Brief & Instructions</a>
               </li>
               <li>
-                <a target="_blank" href="https://github.com/danrleimartins/web.dev-learn" class="text-dark">GitHub Repository</a>
+                <a target="_blank" href="https://danrleimartins.github.io/web.dev-learn/index.html" class="text-dark">Website Hosted on GitHub</a>
               </li>
               <li>
                 <a target="_blank" href="https://github.com/danrleimartins" class="text-dark">GitHub Profile</a>
